--- a/semana13/semana13/package.json
+++ b/semana13/semana13/package.json
@@ -15,10 +15,16 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@fastify/cors": "^11.0.1",
     "@prisma/client": "^6.7.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "bcryptjs": "^3.0.2",
+    "D": "^1.0.0",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.2",
+    "fastify-jwt": "^4.1.3",
+    "fastify-plugin": "^5.0.1",
     "prisma": "^6.7.0"
   }
 }
